--- a/templates/item.hbs
+++ b/templates/item.hbs
@@ -8,16 +8,39 @@
   </div>
 
   <div class="form-group">
+    <label for="owner">Current Owner:</label>
+    {{input id="owner" class="form-control" value=owner}}
+  </div>
+
+  <div class="form-group">
+    <label for="age">Age of Item:</label>
+    {{input id="age" class="form-control" value=age}}
+  </div>
+
+  <div class="form-group">
     <label for="description">Description</label>
-    {{textarea id="description" class="form-control" rows="15" value=description}}
+    {{textarea id="description" class="form-control" rows="10" value=description}}
+  </div>
+
+  <div class="form-group">
+    <label for="imageURL">Add an Image:</label>
+    {{input id="imageURL" class="form-control" value=imageURL}}
   </div>
 
   <button class="btn btn-primary" {{action 'save'}}>Save</button>
-  </form>
+</form>
 
 {{else}}
-  <p>{{description}}</p>
-
-  <button class="btn btn-primary" {{action 'edit'}}>Edit</button>
-  <button class="btn btn-danger"  {{action 'delete'}}>Delete</button>
+  <div class="col-md-4">
+    <p>Owner: {{owner}}</p>
+    <p>Age of Item: {{age}}</p>
+    <p>Bid Identification Code: {{this.id}}</p>
+    <p>Description:{{description}}</p>
+    <br><br>
+    <button class="btn btn-primary" {{action 'edit'}}>Edit</button>
+    <button class="btn btn-danger"  {{action 'delete'}}>Delete</button>
+  </div>
+  <div class="col-md-4">
+    <img class="itemImage" {{bind-attr src=this.imageURL}}/>
+  </div>
 {{/if}}
