--- a/templates/newItem.hbs
+++ b/templates/newItem.hbs
@@ -7,13 +7,24 @@
   </div>
 
   <div class="form-group">
-    <label for="description">Description</label>
-    {{textarea id="description" class="form-control" rows="15" value=description}}
+    <label for="owner">Current Owner:</label>
+    {{input id="owner" class="form-control" value=owner}}
   </div>
 
-  <!-- Others to add later?
-  Estimated value
-  Type -->
+  <div class="form-group">
+    <label for="age">Age of Item:</label>
+    {{input id="age" class="form-control" value=age}}
+  </div>
+
+  <div class="form-group">
+    <label for="description">Description</label>
+    {{textarea id="description" class="form-control" rows="10" value=description}}
+  </div>
+
+  <div class="form-group">
+    <label for="imageURL">Add an Image:</label>
+    {{input id="imageURL" class="form-control" value=imageURL}}
+  </div>
 
   <button class="btn btn-primary" {{action 'save'}}>Save</button>
 
